--- a/Handling Missing Values in Data Analysis.ipynb
+++ b/Handling Missing Values in Data Analysis.ipynb
@@ -17,7 +17,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "fab3a314",
+   "id": "0c5e3161",
    "metadata": {},
    "source": [
     "![image.png](attachment:image.png)"
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48b0da53",
+   "id": "f545bbaa",
    "metadata": {},
    "source": [
     "Source: analyticsindiamag"
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51460fc8",
+   "id": "18883bc5",
    "metadata": {},
    "source": [
     "# How Is a Missing Value Represented in a Dataset?\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 67,
    "id": "54333c7c",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "47341589",
+   "id": "b683685b",
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "9fd49b67",
+   "id": "bdd565ad",
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82164575",
+   "id": "de61248c",
    "metadata": {},
    "source": [
     "* From the above output, we can see that there are 3 columns – Age, Cabin, Embarked, having missing values."
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3feacb3",
+   "id": "a346f0d6",
    "metadata": {},
    "source": [
     "* There are 866 missing values in total."
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "844f9def",
+   "id": "104cba31",
    "metadata": {},
    "source": [
     "# Handling Missing Values\n",
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26f492bc",
+   "id": "224d04d4",
    "metadata": {},
    "source": [
     "* Analyze each column with missing values carefully to understand the reasons behind the missing of those values, as this information is crucial to choose the strategy for handling the missing values.\n",
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1140b26",
+   "id": "afe386ac",
    "metadata": {},
    "source": [
     "# Deleting the Missing value"
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57d72ac3",
+   "id": "1c52793b",
    "metadata": {},
    "source": [
     "* Generally, this `approach is not recommended`. It is one of the quick and dirty techniques one can use to deal with missing values. If themissing value is of the type` Missing Not At Random (MNAR), then it should not be deleted`.\n",
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1af2dbae",
+   "id": "28797b4b",
    "metadata": {},
    "source": [
     "The disadvantage of this method is one might end up deleting some useful data from the dataset.\n",
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5d88f53",
+   "id": "d2f63bba",
    "metadata": {},
    "source": [
     "# Deleting the entire row (listwise deletion)\n",
@@ -441,8 +441,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "8a6b720d",
+   "execution_count": 68,
+   "id": "44e1d667",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "866"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.isnull().sum().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "616df54d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,8 +472,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "dc0932d0",
+   "execution_count": 70,
+   "id": "8461ce37",
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +482,7 @@
        "0"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,7 +493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3bb8702a",
+   "id": "ccf56476",
    "metadata": {},
    "source": [
     "# Deleting the entire column\n",
@@ -483,41 +504,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "a30cd755",
+   "execution_count": 61,
+   "id": "701fce00",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "PassengerId      0\n",
-       "Survived         0\n",
-       "Pclass           0\n",
-       "Name             0\n",
-       "Sex              0\n",
-       "Age            177\n",
-       "SibSp            0\n",
-       "Parch            0\n",
-       "Ticket           0\n",
-       "Fare             0\n",
-       "Cabin          687\n",
-       "Embarked         2\n",
-       "dtype: int64"
+       "2"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.isnull().sum()"
+    "data['Embarked'].isnull().sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "8a14e55f",
+   "execution_count": 63,
+   "id": "ab0e4063",
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +546,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -549,7 +558,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad75b48c",
+   "id": "4f97f832",
    "metadata": {},
    "source": [
     "# Imputing the Missing Value\n",
@@ -565,8 +574,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "bfd980a7",
+   "execution_count": 65,
+   "id": "efa1c7f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "687"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['Cabin'].isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "5ce2ec38",
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +605,7 @@
        "0"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -588,7 +618,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b1b9402",
+   "id": "a2bb0be7",
    "metadata": {},
    "source": [
     "# Replacing with the mean\n",
@@ -601,7 +631,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "4ed51acd",
+   "id": "cddc89ba",
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +652,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "43e417a6",
+   "id": "2149c047",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -633,7 +663,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "fdefaa1b",
+   "id": "d9c91b90",
    "metadata": {},
    "outputs": [
     {
@@ -653,7 +683,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93f749b4",
+   "id": "a6dd38c5",
    "metadata": {},
    "source": [
     "# Replacing with the mode\n",
@@ -666,7 +696,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "b241d671",
+   "id": "2d551e49",
    "metadata": {},
    "outputs": [
     {
@@ -699,7 +729,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "93bef8aa",
+   "id": "3a680c4e",
    "metadata": {},
    "outputs": [
     {
@@ -735,7 +765,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c79c9845",
+   "id": "10d9b030",
    "metadata": {},
    "source": [
     "# Replacing with the median\n",
@@ -748,7 +778,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "f9cfe4e6",
+   "id": "f9e2a382",
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +799,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "e46a0649",
+   "id": "bbeb5ef8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -779,7 +809,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "39c8ddb7",
+   "id": "d05fdb78",
    "metadata": {},
    "outputs": [
     {
@@ -799,7 +829,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "640cdb76",
+   "id": "4761b5b6",
    "metadata": {},
    "source": [
     "# Replacing with the previous value – forward fill\n",
@@ -813,7 +843,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "cb958208",
+   "id": "77e8611a",
    "metadata": {},
    "outputs": [
     {
@@ -848,7 +878,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "036b89f7",
+   "id": "9d2d7708",
    "metadata": {},
    "outputs": [
     {
@@ -879,7 +909,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a9f696d",
+   "id": "d5aa84d3",
    "metadata": {},
    "source": [
     "# Replacing with the next value – backward fill\n",
@@ -890,7 +920,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "e378fb0b",
+   "id": "6c1fd689",
    "metadata": {},
    "outputs": [
     {
@@ -921,7 +951,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "533b9b14",
+   "id": "43f3b434",
    "metadata": {},
    "source": [
     "# Interpolation\n",
@@ -933,7 +963,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "4b0aea30",
+   "id": "8f723096",
    "metadata": {},
    "outputs": [
     {
